Issue 7057: 	Command line is misaligned

--- a/extension/skin/classic/linux/firebug.css
+++ b/extension/skin/classic/linux/firebug.css
@@ -39,14 +39,6 @@
     height: 21px;
 }
 
-.fbCommandLine {
-    padding-bottom: 2px;
-}
-
-#fbToggleCommandEditorBox {
-    margin-bottom: 1px;
-}
-
 panelTab {
     font-size: 12px;
 }
